Fix overflow content issue in AccordionBasic.vue vue components, refactor  mega-footer social media link data source to theme model data
- Fix validation error not show up in password field on update profile page

--- a/assets/css/typography.scss
+++ b/assets/css/typography.scss
@@ -46,7 +46,9 @@
         &.small {
             font-size: 18pt;
         }
-
+        &.medium {
+            font-size: 24pt;
+        }
         &.huge {
             font-size: 72pt ;
         }
